Update default product template, replace auto-generated names with meaning full names. Fix issue with accordian text not showing up. Create two new product templates one for Tiles, one for MOBA.

--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -140,6 +140,5 @@
 }
 
 .accordion__content {
-  color:#fff;
   width:70%;
 }
